# BurnProblem

./: CMakeLists.txt
BurnSolver/: CMakeLists.txt  burn_solver.cu  params.cpp
BurnSolver/include/: burn_solver.hpp  coerced_params.cuh  params.hpp
GUI/: CMakeLists.txt  burn_problem.ui  main.cpp  main_window.cpp  main_window.hpp  solver.cpp  solver.hpp  ui_burn_problem.hpp  ui_main_form.hpp
